# line1

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
apps/base/: models.py
apps/blog/: views.py
apps/blog/static/css/: style.css
apps/blog/templates/blog/: base.html  index.html
apps/user/: api.py  models.py  views.py
apps/user/templates/user/: home.html
backend/: README.md  manage.py  pyproject.toml
backend/apps/user/: api.py
backend/line1/: settings.py  urls.py  wsgi.py
backend/line1/config/: base.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/layouts/: AdminLayout.jsx
frontend/src/pages/: Dashboard.jsx
line1/: asgi.py  urls.py
line1/config/: base.py
line1/settings/: base.py
